[gd_scene load_steps=9 format=2]

[ext_resource path="res://Pause.gd" type="Script" id=1]
[ext_resource path="res://stats_pic.png" type="Texture" id=2]
[ext_resource path="res://recharge bd.otf" type="DynamicFontData" id=3]
[ext_resource path="res://black_circle_thingy.png" type="Texture" id=4]
[ext_resource path="res://Times New Roman Bold.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 70
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 28
font_data = ExtResource( 5 )

[node name="CanvasLayer" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="StatsPic" type="Sprite" parent="."]
position = Vector2( 509.251, 298.124 )
scale = Vector2( 1.01821, 1.02899 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 240.0
margin_top = 136.0
margin_right = 852.0
margin_bottom = 221.0
custom_fonts/font = SubResource( 1 )
text = "PAUSED"
align = 1
valign = 1

[node name="CenterContainer2" type="CenterContainer" parent="."]
margin_left = 168.0
margin_top = 224.0
margin_right = 976.0
margin_bottom = 401.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer2"]
margin_left = 226.0
margin_top = 11.0
margin_right = 581.0
margin_bottom = 166.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer2/VBoxContainer"]
margin_right = 355.0
margin_bottom = 49.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer2/VBoxContainer/CenterContainer"]
margin_left = 5.0
margin_right = 350.0
margin_bottom = 49.0
rect_min_size = Vector2( 345, 0 )

[node name="Label" type="Label" parent="CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 26.0
margin_bottom = 49.0
rect_min_size = Vector2( 26, 0 )
custom_fonts/font = SubResource( 3 )
text = ">"

[node name="Label2" type="Label" parent="CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 30.0
margin_right = 328.0
margin_bottom = 49.0
rect_min_size = Vector2( 298, 0 )
rect_pivot_offset = Vector2( 42, -42 )
custom_fonts/font = SubResource( 3 )
text = " Resume"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer2/VBoxContainer"]
margin_top = 53.0
margin_right = 355.0
margin_bottom = 102.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer2/VBoxContainer/CenterContainer2"]
margin_right = 355.0
margin_bottom = 49.0

[node name="Label" type="Label" parent="CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_right = 26.0
margin_bottom = 49.0
rect_min_size = Vector2( 26, 0 )
custom_fonts/font = SubResource( 3 )
text = ">"

[node name="Label2" type="Label" parent="CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_left = 30.0
margin_right = 355.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 3 )
text = " Restart       "

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer2/VBoxContainer"]
margin_top = 106.0
margin_right = 355.0
margin_bottom = 155.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer2/VBoxContainer/CenterContainer3"]
margin_left = 1.0
margin_right = 353.0
margin_bottom = 49.0
rect_min_size = Vector2( 345, 0 )

[node name="Label" type="Label" parent="CenterContainer2/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_right = 27.0
margin_bottom = 49.0
rect_min_size = Vector2( 27, 0 )
custom_fonts/font = SubResource( 3 )
text = ">"

[node name="Label2" type="Label" parent="CenterContainer2/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_left = 31.0
margin_right = 352.0
margin_bottom = 49.0
rect_min_size = Vector2( 298, 0 )
custom_fonts/font = SubResource( 3 )
text = " Exit            "

[node name="BlackCircleThingy" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.882353 )
position = Vector2( 957.625, 568.438 )
scale = Vector2( 1.41386, 3.98135 )
texture = ExtResource( 4 )

[node name="Label2" type="Label" parent="."]
anchor_top = 0.013
anchor_bottom = 0.013
margin_left = 632.0
margin_top = 496.2
margin_right = 1024.0
margin_bottom = 600.2
custom_fonts/font = SubResource( 4 )
align = 1
valign = 1
